fixed issue with dark mode: accidentally added classList.add for both light and dark mode, which put the user in dark mode automatically whether their preference was with light or dark mode. now adapts properly to user preferences

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -277,3 +277,14 @@ body.dark-mode header nav .nav-list li .nav-links:hover{
 .about-me h2, .about-me p {
   text-align: center;
 }
+
+a {
+  text-decoration: none;
+  color: #4281A4;
+  font-weight: bold;
+}
+
+a:hover {
+  font-weight: bolder;
+  color: #48A9A6;
+}
